# natasha-spacy

./: .gitignore  README.md  pyproject.toml
project/: config_trf.cfg  main.ipynb  project.yml
