[tool.poetry]
name = "natasha-spacy"
version = "3.1.0"
description = "Russian multitask spaCy pipeline initialized with rubert-tiny embeddings, trained on Nerus dataset. Assigns context-specific token vectors, POS tags, dependency parse and named entities."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.1.3"
torch = "^1.9.1"
nerus = "^1.7.0"
spacy-transformers = "^1.0.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
pandas = "^1.3.3"
boto3 = "^1.18.46"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
